tests/ui/pattern/pattern-ident-path-generics.stderr
error[E0308]: mismatched types
  --> $DIR/pattern-ident-path-generics.rs:3:9
   |
LL |     match Some("foo") {
   |           ----------- this expression has type `Option<&str>`
LL |         None::<isize> => {}
   |         ^^^^^^^^^^^^^ expected `Option<&str>`, found `Option<isize>`
   |
   = note: expected enum `Option<&str>`
              found enum `Option<isize>`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
