tests/ui/pattern/pattern-ident-path-generics.rs
fn main() {
    match Some("foo") {
        None::<isize> => {}   //~ ERROR mismatched types
        Some(_) => {}
    }
}
